--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <title>VueJS Training</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
+
+<style>
+    li {
+        margin: 20px;
+    }
+</style>
+
 <body>
     <div id="app">
         <span v-bind:title="masatitle">Check Masa (Letak Mouse Dekat Saya)</span>
         <ul>
             <li v-for="insan in insans">
-                {{ insan.nama }}
+                {{ insan.nama }} - {{ insan.kuantiti }}
+                <span v-if="insan.kuantiti === 0">(TIADA STOCK)</span>
+                <button v-on:click="insan.kuantiti++">TAMBAH PRODUK {{ insan.nama }}</button>
             </li>
         </ul>
     </div>
